...
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="0xb-IJ-6Fc">
                                <rect key="frame" x="100" y="203" width="193" height="260"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Login" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Z5M-2M-Pgo">
                                        <rect key="frame" x="0.0" y="0.0" width="193" height="50"/>
                                        <accessibility key="accessibilityConfiguration" identifier="AcIdLoginText"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="4nP-wi-8nv"/>
                                            <constraint firstAttribute="width" constant="193" id="pD9-dO-qz1"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kuB-YM-K1E">
                                        <rect key="frame" x="0.0" y="70" width="193" height="50"/>
                                        <accessibility key="accessibilityConfiguration" identifier="AcIdPasswordLabel"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="193" id="TcW-n4-RzJ"/>
                                            <constraint firstAttribute="height" constant="50" id="zv4-he-yph"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ejc-UF-98a">
                                        <rect key="frame" x="0.0" y="140" width="193" height="50"/>
                                        <accessibility key="accessibilityConfiguration" identifier="AcIdLoginButton"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="GB2-XN-Zwb"/>
                                            <constraint firstAttribute="width" constant="193" id="tXR-iV-qQ0"/>
                                        </constraints>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="filled" title="Login"/>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O7d-HS-zee">
                                        <rect key="frame" x="0.0" y="80.666666666666686" width="91.333333333333329" height="34.333333333333343"/>
                                        <accessibility key="accessibilityConfiguration" identifier="AcIdCatalogButton"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="tinted" title="Каталог"/>
                                        <connections>
                                            <action selector="CatalogButtonAction:" destination="lu6-w5-ZUe" eventType="touchUpInside" id="bTv-Ie-KCc"/>
                                        </connections>
                                    </button>
...
